--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "i18next-browser-languagedetector": "^7.1.0",
     "lodash": "^4.17.21",
     "mapbox-gl": "^2.15.0",
+    "mongoose": "^8.0.4",
     "mui-one-time-password-input": "^2.0.0",
     "next": "^13.5.4",
     "notistack": "^3.0.1",
