--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "apexcharts": "^3.43.0",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.5.1",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "encoding": "^0.1.13",
     "firebase": "^10.4.0",
@@ -48,6 +49,7 @@
     "highlight.js": "^11.8.0",
     "i18next": "^23.5.1",
     "i18next-browser-languagedetector": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mapbox-gl": "^2.15.0",
     "mongoose": "^8.0.4",
