--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/nextjs": "^4.29.3",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
     "@heroicons/react": "^2.1.1",
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
@@ -23,9 +24,11 @@
     "@types/react-dom": "18.2.7",
     "apexcharts": "^3.41.1",
     "autoprefixer": "10.4.14",
+    "axios": "^1.6.5",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "jsvectormap": "^1.5.3",
+    "mongoose": "^8.1.0",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
