--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@heroicons/react": "^2.1.1",
     "@mui/icons-material": "^5.15.4",
+    "@mui/lab": "^5.0.0-alpha.160",
     "@mui/material": "^5.15.4",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/unitedstates": "^1.0.1",
