--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-config-next": "13.4.12",
     "jsvectormap": "^1.5.3",
     "mongoose": "^8.1.0",
+    "nanoid": "^5.0.4",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
