--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@heroicons/react": "^2.1.1",
+    "@mistralai/mistralai": "^0.0.10",
     "@mui/icons-material": "^5.15.4",
     "@mui/lab": "^5.0.0-alpha.160",
     "@mui/material": "^5.15.4",
@@ -26,6 +27,7 @@
     "apexcharts": "^3.41.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.6.5",
+    "encoding": "^0.1.13",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "jsvectormap": "^1.5.3",
@@ -36,8 +38,6 @@
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "18.2.0",
-    "react-jvectormap": "^0.0.16",
-    "react-no-ssr": "^1.1.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
