--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-date-range": "2.0.0-alpha.4",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
