--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/react-date-range": "^1.4.9"
   }
 }
